# kalshi_bot

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  pytest.ini
infrastructure/dead-gecco/prod/: main.tf
kalshi_bot/exchange/: auth.py  connection.py  interface.py
kalshi_bot/strategies/: high_prob.py
src/data/: README.md  influxdb_interface.py  mysql.py  orderbookdb_interface.py
src/data/backends/: s3.py
src/data/coledb/: coledb.py  remote.py
src/data/collection/: orderbook.py  spx_data.py
src/data/databento/: databento.py
src/data/historical/: databento.py
src/data/influxdb/: influxdb_interface.py
src/data/polymarket/: polymarket.py
src/data/reading/: orderbook.py
src/data/research/: market_making_strat.py  possible_profit.py
src/data/research/market_making/: market_making_strat.py  match_spy.ipynb  predict_kalshi_with_es.py
src/data/research/visualizations/: price_and_orderbook_change.py
src/data/store/influxdb/: interface.py
src/exchange/: auth.py  connection.py  interface.py  orderbook.py  portfolio.py  sim.py
src/helpers/: constants.py  utils.py
src/helpers/types/: api.py  auth.py  common.py  exchange.py  markets.py  money.py  orderbook.py  orders.py  portfolio.py  trades.py  url.py  websockets.py
src/helpers/types/websockets/: common.py  request.py  response.py
src/strategies/: experiment1.py  high_prob.py
src/strategies/experiment_1/: experiment.py  orderbook_collection.py
src/strategies/experiment_1/models/: last_portfolio.pickle  price_no  price_yes  quantity_no  quantity_yes
src/strategy/: match_spy.py  predetermined_strategy.py  strategy.py  utils.py
src/strategy/features/base/: kalshi.py  spy.py
src/strategy/features/derived/: addition.py  derived_feature.py  spy_kalshi.py
src/strategy/live/: election_markets.py  live_general_mm.py  live_order_gateway.py  multi-strat-live.py  seed_strat.py  single_strat_live_order_gateway.py  strategy_worker.py  tan_model.py  types.py  you_missed_a_spot_live.py
src/strategy/live/databento/: live_reader.py
src/strategy/research/: IDEAS.txt  possible_profit.py
src/strategy/research/large_trades/: analyze_non_daily_large_move_tickers.ipynb  manchin.ipynb  non-daily-tickers.txt  raw_tickers_with_large_movements.txt
src/strategy/research/market_making/: clean_es_data.ipynb  match_spy.ipynb  predict_kalshi_with_es.py
src/strategy/sim/: active_ioc.py  sim.py
src/strategy/strategies/: barrier_options.py  bucket_strategy.py  dumb_orderbook_strategy.py  election_market_making.py  follow_the_leader_strategy.py  general_market_making.py  graveyard_strategy.py  inxz_strategy.py  match_spy.py  ml_ob_strategy.py  predetermined_strategy.py  spy_bucket_other_prediction.py  spy_theta_decay.py  stop_loss_strategy.py  tan_model_inxz_strat.py  tight_spread_high_prob.py  you_missed_a_spot_strategy.py
src/strategy/synth/: sketch.py  utils.py
tests/: conftest.py  fake_exchange.py  fee_test.py  utils.py
tests/data/databento/: 20230831-truncated.mbo.csv
tests/helpers/exchange/: exchange.py
tests/integration/: auth_integration_test.py  experiment_1_integration_test.py  markets_test.py  orderbook_collection_test.py  orderbook_integration_test.py  orderbook_reader_integration_test.py  orderbook_reader_test.py  orders_test.py  place_orders_test.py  portfolio_integration_test.py  research_integration_test.py  tan_model_test.py  trades_test.py  websocket_test.py
tests/unit/: auth_test.py  backends_test.py  coledb_unit_test.py  common_test.py  connection_test.py  experiment_1_test.py  feature_test.py  fee_test.py  id_test.py  influxdb_test.py  markets_test.py  orderbook_collection_test.py  orderbook_reader_test.py  orderbook_subscription_test.py  orderbook_test.py  orders_test.py  portfolio_test.py  possible_profit_test.py  prices_test.py  quantity_test.py  rate_limiter_test.py  research_test.py  sessions_wrapper_test.py  sim_test.py  strategy_test.py  synth_test.py  url_test.py  websocket_unit_test.py
(+73 files in other folders)
