[project]
name = "Kalshi Bot"
# NOTE: to change python version, don't forget to change it in
# the pre-commit-config.yaml as well
requires-python = ">=3.11.2"

[tool.poetry]
name = "kalshi-bot"
version = "0.1.0"
description = ""
authors = ["kamyarghiam <kamyarghiam@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.2"
pathlib = "^1.0.1"
pydantic = "^1.10.7"
mock = "^5.0.1"
requests = "^2.28.2"
fastapi = "^0.95.0"
httpx = "^0.23.3"
types-mock = "^5.0.0.5"
types-requests = "^2.28.11.16"
mypy = "^1.1.1"
pytest-cov = "^4.0.0"
polyfactory = "^2.0.0a1"
ratelimit = "^2.2.1"
pytest-xdist = "^3.2.1"
tenacity = "^8.2.2"
scikit-learn = "^1.2.2"
websockets = "^11.0.2"
rich = "^13.3.5"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
influxdb-client = {extras = ["ciso"], version = "^1.36.1"}
filelock = "^3.12.2"
attr = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
exp1 = "src.strategies.experiment_1.experiment:actual_run"
collect_orderbook_data = "src.data.collection.orderbook:collect_prod_orderbook_data"
