[project]
name = "Kalshi Bot"
# NOTE: to change python version, don't forget to change it in
# the pre-commit-config.yaml as well
requires-python = ">=3.11.2"

[tool.poetry]
name = "kalshi-bot"
version = "0.1.0"
description = ""
authors = ["kamyarghiam <kamyarghiam@gmail.com>"]
readme = "README.md"
packages = [{include = "data", from="src"}, {include = "exchange", from="src"}, {include = "helpers", from="src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pytest = "^7.4.2"
pathlib = "^1.0.1"
pydantic = "^1.10.13"
mock = "^5.1.0"
requests = "^2.31.0"
fastapi = "^0.95.0"
httpx = "^0.23.3"
types-mock = "^5.1.0.2"
types-requests = "^2.31.0.10"
mypy = "^1.6.1"
pytest-cov = "^4.1.0"
polyfactory = "^2.11.0"
ratelimit = "^2.2.1"
pytest-xdist = "^3.3.1"
tenacity = "^8.2.3"
scikit-learn = "^1.3.2"
websockets = "^11.0.3"
rich = "^13.6.0"
numpy = "^1.26.1"
matplotlib = "^3.8.0"
filelock = "^3.12.4"
attr = "^0.3.2"
pre-commit = "^3.5.0"
pandas = "^2.1.1"
ipython = "^8.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
exp1 = "strategies.experiment_1.experiment:actual_run"
collect_orderbook_data = "data.collection.orderbook:collect_prod_orderbook_data"
